# autogoldbazel

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.aspect/bazelrc/: BUILD.bazel
.aspect/cli/: config.yaml
version/: BUILD.bazel  version.go  version_test.go
version/testdata/: TestNew.golden
