load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "version",
    srcs = ["version.go"],
    importpath = "github.com/michaellzc/autogoldbazel/version",
    visibility = ["//visibility:public"],
    deps = ["@com_github_hashicorp_go_version//:go-version"],
)

go_test(
    name = "version_test",
    srcs = ["version_test.go"],
    data = glob(["testdata/**"]),
    embed = [":version"],
    deps = [
        "@com_github_hexops_autogold_v2//:autogold",
        "@com_github_stretchr_testify//require",
    ],
)
