"Aspect bazelrc presets; see https://docs.aspect.build/guides/bazelrc"

load("@aspect_bazel_lib//lib:bazelrc_presets.bzl", "write_aspect_bazelrc_presets")

# https://docs.aspect.build/guides/bazelrc/
# to update vendored bazelrc presets, run:
# bazel run //.aspect/bazelrc:update_aspect_bazelrc_presets
write_aspect_bazelrc_presets(
    name = "update_aspect_bazelrc_presets",
    presets = [
        "bazel6",
        "ci",
        "convenience",
        "correctness",
        "debug",
        "performance",
    ],
)
